<?xml version="1.0"?>
<package format="2">
  <name>decomp_ros_utils</name>
  <version>0.0.0</version>
  <description>The decomp_ros_utils package</description>

  <maintainer email="sikang@todo.todo">sikang</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>decomp_util</depend>
  <depend>decomp_ros_msgs</depend>
  <depend>pluginlib</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
